--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../portfolio/assets/css/style.css">
 </head>
+
+
+
 <body>
-    <h1>coming soon!</h1>
+
+        <div>
+            <nav>
+                 <ul class="menu">
+                    <li><a href="../portfolio/index.html" target="_blank">About</a></li>
+                    <li><a href="../portfolio/portfolio.html" target="_blank">Portfolio</a></li>
+                    <li><a href="../portfolio/contact.html" target="_blank">Contact</a></li>
+                </ul>
+            </nav>
+
+                <div>
+                    <h1>Det Sorthepharack</h1>
+                </div>
+        </div>
+    
+
+    <br><br>
+    <div>
+        <div class="content"><h2>About Me</h2></div>
+            <img src="../portfolio/assets/images/2753D1A6-071D-461A-A440-00A27A0DBA28.jpeg" alt="Me">
+            <p>My name is Det Sorthepharack. I'm from Minneapolis, MN. My interest in learning coding and web development came from wanting to create a point of sale system for restaurants and retail businesses. One of my goals as a developer is to help small businesses stay up to date with new and improved systems.</p>
+
+            <p>Five years from now I hope to have a fulfilling career in web development, accomplishing two things: creating my own app, and using my work to help others live efficient and easy lives.</p>
+        
+        </div>
+    </div>
+
+    <footer></footer>
+
 </body>
 </html>
